<resources>
    <string name="app_name">Visualizer</string>

    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="generator">Generator</string>
    <string name="_200">200</string>
    <string name="txt_freq">Frequency:</string>
    <string name="hz">Hz</string>
    <string name="txt_volume">Volume:</string>
    <string name="_20">20%</string>
    <string name="size">Size</string>
    <string name="music">Music</string>

    <string name="bar">Bar</string>
    <string name="seg">Seg</string>
    <string name="wave">Wave</string>
    <string name="styles">Styles</string>
</resources>