<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.tera.visualizer.VisualizerView
        android:id="@+id/vsView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        app:vs_styleColumn="wave" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_volume"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvVolume"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/_20"
            android:textSize="20sp" />

    </LinearLayout>

    <com.tera.sliderwavy.SliderCustom
        android:id="@+id/slVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imPlay"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_play" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/generator"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_freq"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFreq"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:text="@string/_200"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hz"
            android:textSize="20sp" />

    </LinearLayout>

    <com.tera.sliderwavy.SliderCustom
        android:id="@+id/slFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:logEnabled="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/imGenerator"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_play" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/styles"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbWave"
            style="@style/radio_button"
            android:checked="true"
            android:text="@string/wave" />

        <RadioButton
            android:id="@+id/rbBar"
            style="@style/radio_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/bar" />

        <RadioButton
            android:id="@+id/rbSeg"
            style="@style/radio_button"
            android:text="@string/seg" />


    </RadioGroup>

</LinearLayout>